terraform/modules/ec2/main.tf
resource "aws_instance" "this" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.allow_http_ssh.id]

  user_data              = file("${path.module}/../../setup.sh")
iam_instance_profile = aws_iam_instance_profile.cw_profile.name

  tags = {
    Name = var.instance_name
  }
}

resource "aws_security_group" "allow_http_ssh" {
  name        = "${var.instance_name}-sg"
  description = "Allow HTTP and SSH"
  ingress = [
    {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    },
    {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  ]
  egress = [
    {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }
  ]
}
resource "aws_eip" "this" {
  instance = aws_instance.this.id
}
resource "aws_iam_role" "ec2_logging" {
  name = "ec2-cloudwatch-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Effect = "Allow",
      Principal = {
        Service = "ec2.amazonaws.com"
      },
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_role_policy_attachment" "cw_attach" {
  role       = aws_iam_role.ec2_logging.name
  policy_arn = "arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy"
}

resource "aws_iam_instance_profile" "cw_profile" {
  name = "ec2-cloudwatch-profile"
  role = aws_iam_role.ec2_logging.name
}
